Hydrology fixes